Menu login logout to show only if token and phone number is available, mobile number, expiery, cvv set to numaric and fixed iphone jump to next field for card entry

--- a/assets/css/css-frontend.css
+++ b/assets/css/css-frontend.css
@@ -508,6 +508,8 @@ form#cardDetailsForm label.error {
   border: 1px solid #ccc;
   border-radius: 4px;
   width: 49px;
+  height: 30px;
+  object-fit: contain;
 }
 
 .alarnd--single-payout input:checked {
